tests/ui/const-generics/mgca/tuple_expr_arg_complex.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:12:49
   |
LL |     takes_tuple::<{ core::direct_const_arg!((N, N + 1)) }>();
   |                                                 ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:13:49
   |
LL |     takes_tuple::<{ core::direct_const_arg!((N, T::ASSOC + 1)) }>();
   |                                                 ^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:15:60
   |
LL |     takes_nested_tuple::<{ core::direct_const_arg!((N, (N, N + 1))) }>();
   |                                                            ^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/tuple_expr_arg_complex.rs:16:68
   |
LL |     takes_nested_tuple::<{ core::direct_const_arg!((N, (N, const { N + 1 }))) }>();
   |                                                                    ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 4 previous errors

